--- a/src/HN.Bangumi.Uwp.17763/Strings/zh-CN/Resources.resw
+++ b/src/HN.Bangumi.Uwp.17763/Strings/zh-CN/Resources.resw
@@ -121,6 +121,6 @@
     <value>第三方 Bangumi 客户端</value>
   </data>
   <data name="DisplayName" xml:space="preserve">
-    <value>Bangumi</value>
+    <value>Bangumi H</value>
   </data>
 </root>
